--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,7 +1,7 @@
 <section>
 <div class="bg-slate-50 shadow-2xl p-5 rounded">
    <form [formGroup]="formData">
-    <div class="grid grid-cols-2">
+    <div class="grid grid-cols-1 gap-y-3 sm:grid-cols-2">
         <!-- check data -->
         @if(data && data.length){
         <!-- Loop the data -->
@@ -19,8 +19,8 @@
         }
         @else {
         <div class="bg-gray-200 py-1 px-5 border-b border-black capitalize m-2 flex flex-col  gap-y-2">
-            <label class="text-[14px] text-gray-500 capitalize" for={{item.name}}>{{item.name}} <span class="text-red-500">{{item.required}}</span></label>
-            <input class="outline-none bg-transparent" formControlName={{item.name}} type={{item.type}} name={{item.name}} id={{item.name}}>
+            <label class="text-[14px] text-gray-500 capitalize" for={{item.name}}>{{item.label}} <span class="text-red-500">{{item.required}}</span></label>
+            <input class="outline-none bg-transparent" placeholder={{item.placeholder}} formControlName={{item.name}} type={{item.type}} name={{item.name}} id={{item.name}}>
         </div>
         }
         }
