--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -3,7 +3,7 @@
         <div class="grid grid-cols-1 sm:grid-cols-2   sm:gap-x-2 gap-y-2 md:sm:gap-x-5 justify-around ">
             <div class="bg-gray-200  px-5 border-b border-black capitalize  flex flex-col  gap-y-2">
                 <label class="text-[14px] text-gray-500 capitalize" for='search'>search</label>
-                <input [(ngModel)]="searchInput" class="outline-none bg-transparent " placeholder='eg : John' 
+                <input [(ngModel)]="searchInput"  (change)="search()" class="outline-none bg-transparent " placeholder='eg : John' 
                     type='text' name='search' id='search'>
             </div>
             <div class="bg-gray-200  px-5 border-b border-black capitalize  flex flex-col  gap-y-2">
@@ -36,8 +36,8 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @for (item of data; track item; let i=$index; let even = $even) {
-                                        <tr class="border-b dark:border-neutral-500 {{even?'bg-gray-100':''}}">
+                                    @for (item of data | paginate: { itemsPerPage: ps, currentPage: p }; track item; let i=$index; let even = $even; ) {
+                                        <tr class="border-b hover:bg-gray-300 dark:border-neutral-500 {{even?'bg-gray-100':''}}">
                                             <td class="whitespace-nowrap px-6 py-4 font-medium">{{i+1}}</td>
                                             <td class="whitespace-nowrap px-6 py-4">{{item.name}}</td>
                                             <td class="whitespace-nowrap px-6 py-4">
@@ -53,7 +53,22 @@
                                     }
                                 </tbody>
                             </table>
+                           
                         </div>
+                        
+                    </div>
+                    
+                </div>
+                <div class="flex justify-center flex-col sm:flex-row text-center">
+                    <pagination-controls (pageChange)="p = $event"></pagination-controls><div>
+                       <label for="paginationNo">
+                        item per page
+                       </label>
+                        <select class="p-2" (click)="isPagante()"  [(ngModel)]="pagiantionSelect" name="paginationNo" id="paginationNo">
+                           @for (item of paginationListNumber; track $index) {
+                            <option value={{item}}>{{item}}</option>
+                           }
+                        </select>
                     </div>
                 </div>
             </div>
